# octo-sudo

./: CMakeLists.txt  PKGBUILD  README.md  main.cpp  octopi-sudo.pro  passworddialog.cpp  passworddialog.ui  sudo.cpp
